--- a/game 2022 mobile/Assembly-CSharp.csproj
+++ b/game 2022 mobile/Assembly-CSharp.csproj
@@ -55,11 +55,13 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\scripts\movement scripts\movement.cs" />
-    <Compile Include="Assets\Vector3data.cs" />
-    <Compile Include="Assets\floatdata.cs" />
-    <Compile Include="Assets\intdata.cs" />
     <Compile Include="Assets\rotatefix.cs" />
+    <Compile Include="Assets\floatdata.cs" />
+    <Compile Include="Assets\Vector3data.cs" />
+    <Compile Include="Assets\scripts\movement scripts\movement.cs" />
+    <Compile Include="Assets\intdata.cs" />
+    <Compile Include="Assets\backandforth.cs" />
+    <Compile Include="Assets\pickup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -626,8 +628,14 @@
     <Reference Include="System.Xml.Serialization">
       <HintPath>D:\Program Files\2020.2.0a21\Editor\Data\NetStandard\compat\2.0.0\shims\netfx\System.Xml.Serialization.dll</HintPath>
     </Reference>
+    <Reference Include="Cinemachine">
+      <HintPath>Library\ScriptAssemblies\Cinemachine.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.VSCode.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.VSCode.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="com.unity.cinemachine.editor">
+      <HintPath>Library\ScriptAssemblies\com.unity.cinemachine.editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Notifications">
       <HintPath>Library\ScriptAssemblies\Unity.Notifications.dll</HintPath>
@@ -664,12 +672,6 @@
     </Reference>
     <Reference Include="Unity.Notifications.iOS">
       <HintPath>Library\ScriptAssemblies\Unity.Notifications.iOS.dll</HintPath>
-    </Reference>
-    <Reference Include="com.unity.cinemachine.editor">
-      <HintPath>Library\ScriptAssemblies\com.unity.cinemachine.editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Cinemachine">
-      <HintPath>Library\ScriptAssemblies\Cinemachine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
